--- a/package.json
+++ b/package.json
@@ -4,8 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "cd docs && http-server -o",
+    "watch": "parcel -d ${TMPDIR} example/index.html --open",
+    "build": "npm run build:lib && npm run build:site",
+    "build:lib": "npm test && microbundle build src/index.js -o dist -f cjs",
+    "build:site": "rm -fr docs && parcel build -d docs example/index.html --public-url '.' && touch docs/.nojekyll",
+    "test": "eslint \"src/**/*.js\""
   },
-  "author": "",
-  "license": "ISC"
+  "author": "tilecloud.io",
+  "license": "MIT",
+  "devDependencies": {
+    "@tilecloud/mbgl-fork-me-control": "^0.2.5",
+    "@tilecloud/mbgl-tilecloud-control": "^0.3.6",
+    "babel-polyfill": "^6.26.0",
+    "eslint": "^5.16.0",
+    "http-server": "^0.11.1",
+    "microbundle": "^0.11.0",
+    "parcel": "^1.12.3"
+  },
+  "dependencies": {}
 }
