--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@tilecloud/mbgl-gesture-handling",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "start": "cd docs && http-server -o",
     "watch": "parcel -d ${TMPDIR} example/index.html --open",
