--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "@tilecloud/mbgl-gesture-handling",
-  "version": "0.2.0",
-  "description": "",
-  "main": "dist/mbgl-gesture-handling.js",
+  "version": "1.0.0",
+  "description": "This is a Mapbox GL JS plugin that handles wheel and touch gestures to prevent unexpected zooming and moving for the map embeded in your web site.",
+  "main": "mbgl-gesture-handling.js",
   "scripts": {
     "start": "cd docs && http-server -o",
     "watch": "parcel -d ${TMPDIR} example/index.html --open",
-    "build": "npm run build:lib && npm run build:site",
-    "build:lib": "npm test && microbundle build src/index.js -o dist -f cjs",
+    "build": "npm run build:site",
     "build:site": "rm -fr docs && parcel build -d docs example/index.html --public-url '.' && touch docs/.nojekyll",
     "test": "eslint \"src/**/*.js\""
   },
@@ -23,7 +22,6 @@
     "babel-polyfill": "^6.26.0",
     "eslint": "^5.16.0",
     "http-server": "^0.11.1",
-    "microbundle": "^0.11.0",
     "parcel": "^1.12.3"
   }
 }
