--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
     "babel-polyfill": "^6.26.0",
     "eslint": "^5.16.0",
     "http-server": "^0.11.1",
-    "parcel": "^1.12.3"
+    "parcel-bundler": "^1.12.3"
   }
 }
