--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "This is a Mapbox GL JS plugin that handles wheel and touch gestures to prevent unexpected zooming and moving for the map embeded in your web site.",
   "main": "mbgl-gesture-handling.js",
   "scripts": {
-    "start": "cd docs && http-server -o",
-    "watch": "parcel -d ${TMPDIR} example/index.html --open",
+    "start": "parcel -d ${TMPDIR} example/index.html --open",
     "build": "npm run build:site",
     "build:site": "rm -fr docs && parcel build -d docs example/index.html --public-url '.' && touch docs/.nojekyll",
     "test": "eslint \"mbgl-gesture-handling.js\""
